Ui completed with Billing backend

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -9,7 +9,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to '<span class="glyphicon glyphicon-th-list"></span> List'.html_safe, customers_path %></li>
           <li><%= link_to '<span class="glyphicon glyphicon-plus"></span> Add new'.html_safe, new_customer_path %></li>
-          <li><%= link_to '<span class="glyphicon glyphicon-share"></span> Export'.html_safe, export_path %></li>
+          <li><%= link_to '<span class="glyphicon glyphicon-search"></span> Search'.html_safe, export_path %></li>
         </ul>
       </div>
     </nav>
