--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -92,7 +92,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 .plan-list {
     padding: 0;
     margin: 0;
-    background: #009688;
+    background: #e74c3c;
     display: none;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.12);
     li {
@@ -101,7 +101,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
         padding: 10px;
         color: #fff;
         font-weight: 600;
-        border-bottom: 1px solid #5aa09a;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.12);
         cursor: pointer;
         &:hover {
             background: #525252;
@@ -946,4 +946,51 @@ header {
     img {
         width: 100%;
     }
+}
+.icon-view {
+    .fa, .glyphicon-phone-alt {
+        color: #e74c3c;
+        position: absolute;
+        right: 20px;
+        top: 0;
+        line-height: 84px;
+    }
+}
+
+.form-group .form-control:focus, .form-group-default .form-control:focus {
+    background-image: linear-gradient(#e74c3c, #e74c3c), linear-gradient(#d2d2d2, #d2d2d2) !important;
+}
+.plans {
+    .fa {
+        color: #e74c3c;
+        position: absolute;
+        right: 20px;
+        top: 0;
+        line-height: 84px;
+    }
+}
+.icon-view-rupee {
+    .fa {
+        color: #e74c3c;
+        position: absolute;
+        left: 15px;
+        top: 0;
+        line-height: 84px;
+    }
+    .form-control {
+        padding-left: 15px !important;
+    }
+}
+.checkbox input[type=checkbox]:checked + .checkbox-material .check:before, .checkbox-default input[type=checkbox]:checked + .checkbox-material .check:before {
+    color: #e74c3c !important;
+}
+.checkbox input[type=checkbox]:checked + .checkbox-material .check, .checkbox-default input[type=checkbox]:checked + .checkbox-material .check {
+    color: #e74c3c !important;
+}
+.radio-primary input[type=radio]:checked ~ .circle {
+    border-color: #e74c3c !important;
+}
+
+.radio-primary input[type=radio]:checked ~ .check {
+    background-color: #e74c3c !important;
 }
