--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -58,21 +58,29 @@
                                     <hr/>
                                 </div>
 
-                                <div class="col-md-2">
-                                  <p><strong>Pin code:</strong></p>
-                                  <p><%= @customer.pin_no %></p>
+                                <div class="col-md-6">
+                                  <table class="address-chunks">
+                                    <tr>
+                                      <td><strong>Pin code:</strong></td>
+                                      <td><%= @customer.pin_no %></td>
+                                    </tr>
+                                    <tr>
+                                      <td><strong>Telephone no:</strong></td>
+                                      <td><%= @customer.telephone_no %></td>
+                                    </tr>
+                                  </table>
                                 </div>
-                                <div class="col-md-3">
-                                  <p><strong>Telephone no:</strong></p>
-                                  <p><%= @customer.telephone_no %></p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p><strong>Email:</strong></p>
-                                    <p><%= @customer.email %></p>
-                                </div>
-                                <div class="col-md-3">
-                                    <p><strong>Mobile no:</strong></p>
-                                    <p><%= @customer.mobile_no %></p>
+                                <div class="col-md-6">
+                                    <table class="address-chunks">
+                                      <tr>
+                                        <td><strong>Email:</strong></td>
+                                        <td><%= @customer.email %></td>
+                                      </tr>
+                                      <tr>
+                                        <td><strong>Mobile no:</strong></td>
+                                        <td><%= @customer.mobile_no %></td>
+                                      </tr>
+                                    </table>
                                 </div>
                               </div>
                           </div> 
