--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,7 @@
 			<div class="col-lg-2 side-bar">
 				<ul class="nav sidebar-nav">
 				  <li class="active"><%=link_to '<i class="fa fa-users" aria-hidden="true"></i> Customers'.html_safe, customers_path %></li>
-				  <li><a href="#">Users</a></li>
-				  <li><a href="#">Page 2</a></li> 
+				  <li><%=link_to '<i class="fa fa-black-tie fa-lg" aria-hidden="true"></i> Executives'.html_safe, employee_details_path %></li>
 				</ul>
 			</div>
 			<div class="col-sm-11 col-lg-10 col-md-10 side-bar-contet" style="float:right">
