--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -7,7 +7,6 @@
     <ul class="nav navbar-nav">
       <li><%= link_to '<span class="glyphicon glyphicon-th-list"></span> List'.html_safe, customers_path %></li>
       <li class="active"><%= link_to '<span class="glyphicon glyphicon-plus"></span> Add new'.html_safe, new_customer_path %></li>
-      <li><%= link_to '<span class="glyphicon glyphicon-share"></span> Export'.html_safe, export_path %></li>
     </ul>
   </div>
 </nav>
@@ -20,6 +19,12 @@
         <%= form_for @customer do |f| %>
          <div class="row">
              <div class="form-group col-md-3 icon-view">
+                 <%= f.fields_for :employee_details do |emp| %>
+                     <%= emp.label :emp_id ,'Employee Id'%>
+                     <%= emp.text_field :emp_id, class: "form-control", placeholder: "Enter application date." %>
+                 <% end %>
+             </div>
+             <div class="form-group col-md-3 icon-view">
                 <%= f.label :date ,'Date'%>
                 <%= f.text_field :date, class: "form-control", placeholder: "Enter application date." %>
                 <i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
@@ -28,7 +33,7 @@
                  <%= f.label :connection_id ,'User Id'%>
                  <%= f.text_field :connection_id, class: "form-control", placeholder: "Enter user id." %>
              </div>
-             <div class="form-group col-md-6 icon-view-rupee">
+             <div class="form-group col-md-3 icon-view-rupee">
                  <%= f.label :name ,'Customer name'%>
                  <%= f.text_field :name, class: "form-control", placeholder: "Enter customer name." %>
                  <i class="fa fa-user fa-lg" aria-hidden="true"></i>
