Mailing system completed

--- a/app/views/employee_details/new.html.erb
+++ b/app/views/employee_details/new.html.erb
@@ -26,7 +26,7 @@
     			</div>
     			<div class="form-group">
     				<%= f.label :emp_id, "Employee Id" %>
-    				<%= f.text_field :emp_id, class: "form-control", placeholder: "Enter employee id" %>
+    				<%= f.text_field :emp_id, class: "form-control", placeholder: "Enter employee id." %>
     			</div>
     			<div class="form-group">
     				<%= f.submit "create employee", class: "btn btn-md btn-danger" %>
