zone code completed

--- a/app/views/customers/_look_up.html.erb
+++ b/app/views/customers/_look_up.html.erb
@@ -25,7 +25,7 @@
 			 <div class="table-responsive resp-table">
 			  <table class="table table-striped customer-list-table">
 			    <thead>
-			      <tr>
+			      <tr class="danger">
 			        <th>User Id</th>
 			        <th>Employee Id</th>
 			        <th>Date</th>
