--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,15 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'> -->
+  <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet" type='text/css'>
+
+
 </head>
 <body>
-	<%= render 'layouts/navbar' %>
+	
 	<div class="container alert-box">
 		<% flash.each do |name,msg| %>
 			<div class="container animated bounceInDown">
@@ -27,13 +33,16 @@
 
 		<div class="row">
 			<div class="col-lg-2 side-bar">
+				<%= link_to image_tag("aboutimg.png", :border=>0, class: "img-responsive logo-img" ), root_path, :alt=>"logo"  %>
 				<ul class="nav sidebar-nav">
 				  <li class="active"><%=link_to '<i class="fa fa-users" aria-hidden="true"></i> Customers'.html_safe, customers_path %></li>
 				  <li><%=link_to '<i class="fa fa-black-tie fa-lg" aria-hidden="true"></i> Executives'.html_safe, employee_details_path %></li>
+				  <li><%=link_to '<i class="fa fa-check-square-o fa-lg" aria-hidden="true"></i> Plans'.html_safe, gcn_plans_path %></li>
+
 				</ul>
 			</div>
 			<div class="col-sm-11 col-lg-10 col-md-10 side-bar-contet" style="float:right">
-				
+				<%= render 'layouts/navbar' %>
 				<%= yield %>
 		  	</div>
 		</div>
