--- a/app/views/layouts/customerdashbord.html.erb
+++ b/app/views/layouts/customerdashbord.html.erb
@@ -6,6 +6,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+  <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet" type='text/css'>
 </head>
 <body class="home" style="background-color: #F5F5F5">
 	<div class="container alert-box">
