--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,7 +9,7 @@ html, body {
 	background-color: #fff !important;
 }
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
-	font-family: "ROBOTO" !important;
+	font-family: 'Domine', serif !important;
 }
 
 .navbar-default.navbar.main-navbar {
@@ -24,6 +24,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 	padding: 0;
 	position: fixed;
 	float: left;
+    z-index: 1
 }
 .navbar {
 	margin-bottom: 0px;
@@ -83,9 +84,10 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
         a {
             font-size: 15px;
             // text-transform: uppercase;
-            font-weight: 600;
+            font-weight: 700;
             color: #337ab7;
             border-bottom: 1px solid #e7e7e7;
+            font-family: 'Rajdhani', sans-serif !important;
         }
     }
 }
@@ -148,8 +150,8 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
             width: auto;
             vertical-align: middle !important;
             padding: 4px !important;
-            font-size: 13px;
-            font-weight: 600;
+            font-size: 12px;
+            font-weight: 500;
             .btn {
                 font-size: 10px;
                 padding: 3px 10px!important;
@@ -1019,6 +1021,7 @@ button.btn.look-sub-btn {
             padding: 3px 10px;
             &:first-child {
                 text-align: right;
+                color: #676767;
             }
             &:last-child {
                 color: #337ab7;
@@ -1027,4 +1030,18 @@ button.btn.look-sub-btn {
             }
         }
     }
+}
+.sidebar-nav li a {
+    i.fa {
+        margin-right: 5px;
+    }
+}
+.logo-img {
+    width: 100%;
+    margin: 0px auto 20px auto;
+    border: 10px inset #e74c3c;
+    padding: 15px;
+}
+.side-bar-contet {
+    z-index: 0;
 }
